--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -191,6 +192,8 @@ android {
 dependencies {
     compile project(':react-native-audio-recorder-player')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    implementation 'com.android.support:multidex:2.0.1'
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
