--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-audio-recorder-player": "^3.5.1",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-contacts": "^7.0.5",
     "react-native-dialog": "^9.2.2",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.3.1",
@@ -34,14 +37,17 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-textfield": "^0.16.1",
     "react-native-message-bar": "^2.1.0",
-    "react-native-modalize": "^2.0.13",
+    "react-native-modalize": "^2.1.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-svg": "^13.0.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
@@ -56,6 +62,7 @@
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
     "metro-react-native-babel-preset": "^0.71.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
