--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-audio-recorder-player": "^3.5.1",
@@ -37,6 +38,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-textfield": "^0.16.1",
     "react-native-message-bar": "^2.1.0",
+    "react-native-modal-popover": "^2.1.0",
     "react-native-modalize": "^2.1.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
