--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,9 @@ dependencies {
     compile project(':react-native-audio-recorder-player')
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+
+    implementation project(':react-native-contacts')
+
     implementation 'com.android.support:multidex:2.0.1'
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
