--- a/ios/DaniyalTest/Info.plist
+++ b/ios/DaniyalTest/Info.plist
@@ -8,6 +8,8 @@
 	<string>DaniyalTest</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>NSContactsUsageDescription</key>
+	<string>You want to allow access contact list</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
