--- a/ios/DaniyalTest/Info.plist
+++ b/ios/DaniyalTest/Info.plist
@@ -65,6 +65,11 @@
 		<string>Pangram-Medium.otf</string>
 		<string>Pangram-Regular.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>voip</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
