--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         buildToolsVersion = "30.0.2"
         minSdkVersion = 26
-        compileSdkVersion = 30
+        compileSdkVersion = 31
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
         kotlinVersion = '1.5.0'
@@ -14,8 +14,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.2.2")
+         classpath("com.android.tools.build:gradle:4.2.2")
          classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+         classpath "com.google.gms:google-services:4.3.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
