--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-audio-recorder-player": "^3.5.1",
@@ -29,6 +30,7 @@
     "react-native-contacts": "^7.0.5",
     "react-native-dialog": "^9.2.2",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.5.0",
@@ -44,6 +46,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-section-alphabet-list": "^3.0.0",
     "react-native-svg": "^13.0.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^9.2.0",
